--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "aristacc-jan2023"
+name = "gcp-rust"
 version = "0.1.0"
 edition = "2021"
 
@@ -11,3 +11,5 @@ serde = { version = "1.0", features = ["derive"] }
 reqwest = { version = "0.11", features = ['json'] }
 tokio = { version = "1", features = ["full"] }
 url = { version = "2", features = ["serde"]}
+eyre = "0.6.8"
+color-eyre = "0.6.2"
