--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ tokio = { version = "1", features = ["full"] }
 url = { version = "2", features = ["serde"]}
 eyre = "0.6.8"
 color-eyre = "0.6.2"
+axum = "0.6.2"
